loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:4: error: value à is not a member of Int
for (marches <- 1 à 8){
                  ^LoopStairs:10: error: value à is not a member of Int
for (pas <- 1 à 3){
              ^